# mathapi

./: LICENSE  README.md  main.py  pyproject.toml  setup.cfg
src/api/: __init__.py  matrix.py  vector.py
