[metadata]
name = mathapi-JARVIS
version = 0.0.1
author = Ilya (JARVISbyte)
author_email = waterwalker1020@gmail.com
description = A useful math staff package. Now includes vector and matrix classes and related functionality, but will be modified and an more functionality added.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src